--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -1,6 +1,526 @@
 command_id: 7E0.7E8.22E001
 test_cases:
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 58.50266
+    VELOSTER_OIL_TEMP: 84.0033
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B0AE4B780D64
+    7E82200000000CE0004
+    7E8234100281100005F
+    7E82400B6FF03696902
+    7E825C7008EB045BAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 48.75242
+    VELOSTER_OIL_TEMP: 54.00255
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B3B14CBC1D53
+    7E8220000000079003F
+    7E8232540260F0000E8
+    7E8240088FF036A5802
+    7E8250101818831BBFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 61.50274
+    VELOSTER_OIL_TEMP: 96.75362
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B3B14ECC0B46
+    7E82200000000650050
+    7E82320801E0500004F
+    7E82400C0FF036E5F02
+    7E825BA0092C164BAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 57.00263
+    VELOSTER_OIL_TEMP: 99.00368
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B3B155B40167
+    7E822000000001801DB
+    7E8235300210F000051
+    7E82400BFFF03665A02
+    7E825CF008CC456BFFF
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 36.75212
+    VELOSTER_OIL_TEMP: 39.00218
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B3B34A681277
+    7E822000000007600C5
+    7E8232500240C00004D
+    7E8240174FF035E6002
+    7E825580171746232FD
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 57.00263
+    VELOSTER_OIL_TEMP: 95.25358
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B3B351C00B46
+    7E8220000000092009A
+    7E8232E802109000056
+    7E82400BCFF03645D02
+    7E825CE008CBF6438FE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 43.50229
+    VELOSTER_OIL_TEMP: 90.75347
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B3B44C040D5A
+    7E822000000006A0008
+    7E82322801F07000050
+    7E82400C0FF03606002
+    7E82525017AB964BAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 62.25276
+    VELOSTER_OIL_TEMP: 99.00368
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B6014C000046
+    7E82200000000C40010
+    7E8233D801B02000052
+    7E82400BFFF036A6202
+    7E825B50093C44637FE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 42.00225
+    VELOSTER_OIL_TEMP: 44.25231
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B7B752341067
+    7E822000000006D00BB
+    7E82321802109000024
+    7E824017BFF03615F02
+    7E8253001787B37BAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 62.25276
+    VELOSTER_OIL_TEMP: 90.75347
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B9015100005A
+    7E822000000000D01AA
+    7E82353602008000056
+    7E82400BCFF03725F02
+    7E825B50093B95BBAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 69.75294
+    VELOSTER_OIL_TEMP: 78.00315
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B9B74BFC0D5A
+    7E8220000000066009C
+    7E8231F801F0600007D
+    7E82400A8FF036A6702
+    7E82596009DA84637FE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 55.50259
+    VELOSTER_OIL_TEMP: 72.75302
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B9B950080A64
+    7E82200000000ED00AF
+    7E8234CA0230D000067
+    7E82400B1FF036D5B02
+    7E825D8008AA161BAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 28.50191
+    VELOSTER_OIL_TEMP: 32.25201
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BA0048000067
+    7E822000000000D01AC
+    7E82353002009000024
+    7E824017BFF035D6202
+    7E825A201666B6437FE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 47.25238
+    VELOSTER_OIL_TEMP: 99.00368
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BABA553C2B5A
+    7E8220000000073001F
+    7E82324002A1300005E
+    7E82400B7FF03645A02
+    7E8250C017FC4584501
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 36.0021
+    VELOSTER_OIL_TEMP: 44.25231
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BABA55501D5A
+    7E82200000000690057
+    7E82320C0240D0000BF
+    7E8240091FF036B5702
+    7E8255E01707B48B6FD
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 45.75234
+    VELOSTER_OIL_TEMP: 99.00368
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BABA55EC265A
+    7E82200000000CA00D9
+    7E8233F00352000004F
+    7E82400C0FF03655A02
+    7E82517017DC4534100
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 49.50244
+    VELOSTER_OIL_TEMP: 99.00368
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BABC55941F5A
+    7E82200000000AC000B
+    7E82337402A1300005B
+    7E82400B9FF03655A02
+    7E825F90082C462AAFA
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 48.0024
+    VELOSTER_OIL_TEMP: 102.75377
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BCBA55E01F5A
+    7E822000000000201CB
+    7E8234DC03E2B000051
+    7E82400BFFF03655A02
+    7E825050180C96003F2
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 44.25231
+    VELOSTER_OIL_TEMP: 102.75377
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BCBC540C3055
+    7E822000000005A00FF
+    7E8231CC02710000055
+    7E82400BDFF036E5E02
+    7E8251F017BC94413FD
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 28.50191
+    VELOSTER_OIL_TEMP: 32.25201
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BDBC49A00A6E
+    7E82200000000EB0000
+    7E8234D40240C00002B
+    7E824017AFF03626402
+    7E825A001666B62B4FD
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 35.25208
+    VELOSTER_OIL_TEMP: 45.75234
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BDBD53141C50
+    7E82200000000750047
+    7E8232480230B0000B9
+    7E8240093FF03695E02
+    7E82568016F7D3FBAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 18.75167
+    VELOSTER_OIL_TEMP: 57.00263
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BDBD537C2B55
+    7E82200000000160141
+    7E82356804735000068
+    7E82400B1FF03536002
+    7E825FF01598C3BB9FE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 18.00165
+    VELOSTER_OIL_TEMP: 63.75279
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BDBD53F82F55
+    7E82200000000F5000F
+    7E8234EC04A39000059
+    7E82400BAFF03536002
+    7E825080258953B3CFF
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 63.00278
+    VELOSTER_OIL_TEMP: 102.75377
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BDBF53081C5A
+    7E82200000000810004
+    7E8232800240C00004F
+    7E82400C1FF03735A02
+    7E825B30094C94FB9FE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 60.0027
+    VELOSTER_OIL_TEMP: 95.25358
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BFBD53100B46
+    7E8220000000068006A
+    7E82320001E0500004F
+    7E82400C0FF03725702
+    7E825C10090BF4736FE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 39.00218
+    VELOSTER_OIL_TEMP: 44.25231
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BFBD534C0D55
+    7E82200000000650041
+    7E823200020070000F6
+    7E8240084FF035E5402
+    7E8254A01747B353BFF
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 39.00218
+    VELOSTER_OIL_TEMP: 42.75227
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100BFBF53100E57
+    7E822000000006B00F7
+    7E8232100200700000C
+    7E824017FFF035D5402
+    7E8254701747935BAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 60.75272
+    VELOSTER_OIL_TEMP: 95.25358
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C0BF52B80D5A
+    7E8220000000063001B
+    7E82320001F06000050
+    7E82400BFFE03725A02
+    7E825BB0091BF3A37FE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 44.25231
+    VELOSTER_OIL_TEMP: 95.25358
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C0C04FF8235A
+    7E82200000000DB007F
+    7E82348803023000057
+    7E82400BBFF03626802
+    7E82520017BBF4DB7FD
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 68.25291
+    VELOSTER_OIL_TEMP: 89.25343
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C0C05664124B
+    7E82200000000660080
+    7E8231FE01E06000059
+    7E82400BAFF03765B02
+    7E8259C009BB7523CFF
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 63.00278
+    VELOSTER_OIL_TEMP: 69.00293
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C2C051041164
+    7E82200000000BD0042
+    7E8233C80260F000083
+    7E82400A5FF037E5D02
+    7E825B200949C29B4FD
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 40.50221
+    VELOSTER_OIL_TEMP: 72.003
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C2C254EC2B5A
+    7E82200000000A800B8
+    7E8233400331D000068
+    7E82400B1FF036A5F02
+    7E8253D0176A0183BFF
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 61.50274
+    VELOSTER_OIL_TEMP: 71.25298
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C3C351D81A4F
+    7E82200000000E100DB
+    7E82344802F19000076
+    7E82400ABFF037A5D02
+    7E825BA00929F322BFB
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 40.50221
+    VELOSTER_OIL_TEMP: 60.0027
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C3C54CDC535A
+    7E82200000000C101B7
+    7E82387006D56000082
+    7E82400A6FF036F6002
+    7E8253A0176906435FE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 35.25208
+    VELOSTER_OIL_TEMP: 38.25216
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C5C349880F77
+    7E82200000000B400D8
+    7E82339C0260F00004F
+    7E8240174FF03645F02
+    7E82565016F7362B5FD
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 57.00263
+    VELOSTER_OIL_TEMP: 96.75362
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C5C554000E5A
+    7E822000000006200C4
+    7E8231FC01E0600004D
+    7E82400C1FF03645E02
+    7E825CF008CC1644000
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 41.25223
+    VELOSTER_OIL_TEMP: 83.25328
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C6C64E1C3D5A
+    7E822000000001C02B2
+    7E823A440BDBF000056
+    7E82400BCFF03665E02
+    7E825390177AF2DBAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 42.00225
+    VELOSTER_OIL_TEMP: 93.00353
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C6C650102A55
+    7E822000000000001BE
+    7E8235180402D000059
+    7E82400BAFF03656502
+    7E8252F0178BC3C20F9
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 54.75257
+    VELOSTER_OIL_TEMP: 96.75362
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C6C84E182E5A
+    7E82200000000A3017C
+    7E8238380DAE1000056
+    7E82400BCFF03665802
+    7E825DE0089C145BAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 45.00233
+    VELOSTER_OIL_TEMP: 77.25313
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C6C851084D55
+    7E82200000000B7018F
+    7E82388808F8A000061
+    7E82400B5FF03685D02
+    7E8251D017CA72EB6FD
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 27.00188
+    VELOSTER_OIL_TEMP: 27.75189
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C8C64A841487
+    7E82200000000B30083
+    7E82336C02A14000094
+    7E8240169FF03616402
+    7E825B001646547BAFE
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 49.50244
+    VELOSTER_OIL_TEMP: 63.00278
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C8C6512C234B
+    7E82200000000FF0056
+    7E82351004C3B000094
+    7E824009EFF03665E02
+    7E825FB0082945B3BFF
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 28.50191
+    VELOSTER_OIL_TEMP: 99.00368
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100C8C854082C55
+    7E82200000000ED00F0
+    7E82349404B3A000059
+    7E82400BAFF03575002
+    7E8259E0166C4647FF1
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 51.75249
+    VELOSTER_OIL_TEMP: 102.75377
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100CBCB4F441B5A
+    7E822000000005F00B7
+    7E8231E00210800004A
+    7E82400C4FF03735E02
+    7E825EC0085C9633AFF
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 24.75182
+    VELOSTER_OIL_TEMP: 74.25306
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100CFCF4AD02B55
+    7E82200000000C400A5
+    7E8233B003722000056
+    7E82400BCFF035B6302
+    7E825C90161A34FF8D3
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 25.50184
+    VELOSTER_OIL_TEMP: 56.25261
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100CFD14C502A55
+    7E82200000000FE0058
+    7E8234E404A3900006F
+    7E82400AEFF035C6302
+    7E825C101628B54F7EF
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 38.25216
+    VELOSTER_OIL_TEMP: 42.75227
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100D1CF48040D53
+    7E822000000006C0000
+    7E82321801F060000DF
+    7E8240089FF03685E02
+    7E8254B01737963B6FD
+    7E82600000000AAAAAA
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 60.75272
+    VELOSTER_OIL_TEMP: 92.25351
+  response: |-
     7E8103362E001D9BDFB
     7E821FFC7C7E8860B4A
     7E822000000008100A2
@@ -9,10 +529,10 @@ test_cases:
     7E825D10091BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 60.75272
-    VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 67.50289
+    VELOSTER_OIL_TEMP: 93.00353
+  response: |-
     7E8103362E001D9BDFB
     7E821FFCBCAEC261364
     7E82200000000A30040
@@ -21,10 +541,10 @@ test_cases:
     7E825B3009ABC180000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 67.50289
-    VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 61.50274
+    VELOSTER_OIL_TEMP: 92.25351
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD0D0E8720B4A
     7E822000000007900AE
@@ -33,10 +553,10 @@ test_cases:
     7E825D10092BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 61.50274
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 62.25276
     VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD2D1E87E0B4A
     7E822000000007A00A6
@@ -45,10 +565,10 @@ test_cases:
     7E825CD0093BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 62.25276
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 61.50274
     VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD2D1E8840B4A
     7E822000000007E0096
@@ -57,10 +577,10 @@ test_cases:
     7E825D00092BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 61.50274
-    VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 52.50251
+    VELOSTER_OIL_TEMP: 93.75354
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD2D1E99C175D
     7E82200000000490022
@@ -69,10 +589,10 @@ test_cases:
     7E825060186BD170000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 52.50251
-    VELOSTER_OIL_TEMP: 93.75354
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 60.0027
+    VELOSTER_OIL_TEMP: 92.25351
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3E88C0B4A
     7E822000000007500D0
@@ -81,10 +601,10 @@ test_cases:
     7E825D60090BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 60.0027
-    VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 57.75264
+    VELOSTER_OIL_TEMP: 93.00353
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3E9740C4D
     7E822000000007B002E
@@ -93,10 +613,10 @@ test_cases:
     7E825E3008DBC160000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 57.75264
-    VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 54.00255
+    VELOSTER_OIL_TEMP: 93.75354
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3E9C6185F
     7E822000000007200AC
@@ -105,10 +625,10 @@ test_cases:
     7E825FD0088BD170000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 54.00255
-    VELOSTER_OIL_TEMP: 93.75354
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 67.50289
+    VELOSTER_OIL_TEMP: 93.00353
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3EB080C4D
     7E822000000007B0076
@@ -117,10 +637,10 @@ test_cases:
     7E825B3009ABC190000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 67.50289
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 60.75272
     VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3EC940B4A
     7E82200000000700092
@@ -129,10 +649,10 @@ test_cases:
     7E825D10091BC140000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 60.75272
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 66.00285
     VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3ECDC0B4C
     7E82200000000700060
@@ -141,10 +661,10 @@ test_cases:
     7E825BB0098BC170000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 66.00285
-    VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 57.75264
+    VELOSTER_OIL_TEMP: 94.50356
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD5D4EC92165F
     7E822000000004A0010
@@ -153,10 +673,10 @@ test_cases:
     7E825E5008DBE140000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 57.75264
-    VELOSTER_OIL_TEMP: 94.50356
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 65.25283
+    VELOSTER_OIL_TEMP: 93.75354
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD5D4ECC80E5D
     7E82200000000910026
@@ -165,10 +685,10 @@ test_cases:
     7E825BE0097BD150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 65.25283
-    VELOSTER_OIL_TEMP: 93.75354
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 66.75287
+    VELOSTER_OIL_TEMP: 93.00353
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD5D4ECDA0B4C
     7E822000000007B008C
@@ -177,10 +697,10 @@ test_cases:
     7E825B50099BC150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 66.75287
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 59.25268
     VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD5D4ECE8135B
     7E822000000004B00E0
@@ -189,6 +709,3 @@ test_cases:
     7E825DA008FBC150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 59.25268
-    VELOSTER_OIL_TEMP: 93.00353
