--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
@@ -1,27 +1,246 @@
 command_id: 7A0.7A8.22C00B
 test_cases:
-- response: |-
-    7A8101762C00BFFFF00
-    7A82100B6580100B85F
-    7A8220100AD4E0100B6
-    7A8234D0100AAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_TPMS_ALERT_FL: 0
     VELOSTER_TPMS_ALERT_FR: 1
     VELOSTER_TPMS_ALERT_RR: 1
-    VELOSTER_TPMS_PRESS_FL: 36.4
+    VELOSTER_TPMS_PRESS_FL: 32.2
+    VELOSTER_TPMS_PRESS_FR: 15.2
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 76
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A14C01009F4C
+    7A8220100A14A01009C
+    7A8234A0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 32.4
+    VELOSTER_TPMS_PRESS_FR: 15
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 77
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A24D0100A04B
+    7A8220100A14B01009D
+    7A8234A0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 32.6
+    VELOSTER_TPMS_PRESS_FR: 15.4
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 79
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A34F01009F4D
+    7A8220100A34D01009E
+    7A8234C0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 33
+    VELOSTER_TPMS_PRESS_FR: 15.6
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 79
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A54F0100A54E
+    7A8220100A54E0100A9
+    7A8234F0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 33
+    VELOSTER_TPMS_PRESS_FR: 15.8
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 80
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A5500100A24F
+    7A8220100A44D01009F
+    7A8234C0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 33.4
+    VELOSTER_TPMS_PRESS_FR: 16
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 81
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A7510100A450
+    7A8220100A44D01009F
+    7A8234D0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 33.4
+    VELOSTER_TPMS_PRESS_FR: 17
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 85
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A7550100A555
+    7A8220100A6520100A2
+    7A823500100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 33.8
+    VELOSTER_TPMS_PRESS_FR: 15.4
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 77
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A94D0100A84D
+    7A8220100A74D0100C0
+    7A823640100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 34
+    VELOSTER_TPMS_PRESS_FR: 15.8
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 81
+    VELOSTER_TPMS_TEMP_FR: 2
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100AA510100A54F
+    7A8220200A84F0100A4
+    7A8234E0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 34.2
+    VELOSTER_TPMS_PRESS_FR: 13.8
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 73
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100AB490100A945
+    7A8220100AF450100B1
+    7A823470100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 34.2
+    VELOSTER_TPMS_PRESS_FR: 20.4
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 77
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100AB4D0100BF66
+    7A8220100B65E0100AC
+    7A8234E0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 34.4
     VELOSTER_TPMS_PRESS_FR: 19
     VELOSTER_TPMS_PRESS_RL: 0
     VELOSTER_TPMS_PRESS_RR: 0.2
-    VELOSTER_TPMS_TEMP_FL: 88
+    VELOSTER_TPMS_TEMP_FL: 75
     VELOSTER_TPMS_TEMP_FR: 1
     VELOSTER_TPMS_TEMP_RR: 0
-- response: |-
+  response: |-
     7A8101762C00BFFFF00
-    7A82100B7570100B75A
-    7A8220100B04F0100B9
-    7A8234F0100AAAAAAAA
-  expected_values:
+    7A82100AC4B0100C15F
+    7A8220100B2490100B2
+    7A823490100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 35
+    VELOSTER_TPMS_PRESS_FR: 20.8
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 86
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100AF560200BD68
+    7A8220100B8610100BB
+    7A823620100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 35.2
+    VELOSTER_TPMS_PRESS_FR: 14.8
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 76
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100B04C0100AE4A
+    7A8220100B4490100B4
+    7A823490100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 35.8
+    VELOSTER_TPMS_PRESS_FR: 15.6
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.4
+    VELOSTER_TPMS_TEMP_FL: 81
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100B3510100B14E
+    7A8220100BA530200B6
+    7A8234C0100AAAAAAAA
+- expected_values:
     VELOSTER_TPMS_ALERT_FL: 0
     VELOSTER_TPMS_ALERT_FR: 1
     VELOSTER_TPMS_ALERT_RR: 1
@@ -29,86 +248,107 @@ test_cases:
     VELOSTER_TPMS_PRESS_FR: 18
     VELOSTER_TPMS_PRESS_RL: 0
     VELOSTER_TPMS_PRESS_RR: 0.2
-    VELOSTER_TPMS_TEMP_FL: 87
+    VELOSTER_TPMS_TEMP_FL: 88
     VELOSTER_TPMS_TEMP_FR: 1
     VELOSTER_TPMS_TEMP_RR: 0
-- response: |-
+  response: |-
     7A8101762C00BFFFF00
     7A82100B7580200B65A
     7A8220100AE4F0100B6
     7A8234E0200AAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_TPMS_ALERT_FL: 0
     VELOSTER_TPMS_ALERT_FR: 1
     VELOSTER_TPMS_ALERT_RR: 1
-    VELOSTER_TPMS_PRESS_FL: 36.6
-    VELOSTER_TPMS_PRESS_FR: 18
+    VELOSTER_TPMS_PRESS_FL: 37
+    VELOSTER_TPMS_PRESS_FR: 18.2
     VELOSTER_TPMS_PRESS_RL: 0
     VELOSTER_TPMS_PRESS_RR: 0.2
-    VELOSTER_TPMS_TEMP_FL: 88
+    VELOSTER_TPMS_TEMP_FL: 91
     VELOSTER_TPMS_TEMP_FR: 1
     VELOSTER_TPMS_TEMP_RR: 0
-- response: |-
+  response: |-
     7A8101762C00BFFFF00
-    7A82100B7580200B75F
-    7A8220200AE4E0200B6
-    7A8234E0100AAAAAAAA
-  expected_values:
+    7A82100B95B0100BA5B
+    7A8220100B65501002B
+    7A823540200AAAAAAAA
+- expected_values:
     VELOSTER_TPMS_ALERT_FL: 0
     VELOSTER_TPMS_ALERT_FR: 1
     VELOSTER_TPMS_ALERT_RR: 1
-    VELOSTER_TPMS_PRESS_FL: 36.6
-    VELOSTER_TPMS_PRESS_FR: 19
+    VELOSTER_TPMS_PRESS_FL: 38.2
+    VELOSTER_TPMS_PRESS_FR: 19.4
     VELOSTER_TPMS_PRESS_RL: 0
-    VELOSTER_TPMS_PRESS_RR: 0.4
-    VELOSTER_TPMS_TEMP_FL: 88
-    VELOSTER_TPMS_TEMP_FR: 2
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 96
+    VELOSTER_TPMS_TEMP_FR: 1
     VELOSTER_TPMS_TEMP_RR: 0
-- response: |-
+  response: |-
     7A8101762C00BFFFF00
-    7A82100B7580200B75F
-    7A8220200AE4E0200B6
-    7A8234E0200AAAAAAAA
-  expected_values:
+    7A82100BF600100C161
+    7A8220100BE5C0100C1
+    7A8235D0100AAAAAAAA
+- expected_values:
     VELOSTER_TPMS_ALERT_FL: 0
     VELOSTER_TPMS_ALERT_FR: 1
     VELOSTER_TPMS_ALERT_RR: 1
-    VELOSTER_TPMS_PRESS_FL: 36.6
-    VELOSTER_TPMS_PRESS_FR: 19
-    VELOSTER_TPMS_PRESS_RL: 0
-    VELOSTER_TPMS_PRESS_RR: 0.4
-    VELOSTER_TPMS_TEMP_FL: 88
-    VELOSTER_TPMS_TEMP_FR: 2
-    VELOSTER_TPMS_TEMP_RR: 0
-- response: |-
-    7A8101762C00BFFFF00
-    7A82100B7590100B65A
-    7A8220100AE4F0100B7
-    7A8234F0100AAAAAAAA
-  expected_values:
-    VELOSTER_TPMS_ALERT_FL: 0
-    VELOSTER_TPMS_ALERT_FR: 1
-    VELOSTER_TPMS_ALERT_RR: 1
-    VELOSTER_TPMS_PRESS_FL: 36.6
-    VELOSTER_TPMS_PRESS_FR: 18
+    VELOSTER_TPMS_PRESS_FL: 38.4
+    VELOSTER_TPMS_PRESS_FR: 17.8
     VELOSTER_TPMS_PRESS_RL: 0
     VELOSTER_TPMS_PRESS_RR: 0.2
     VELOSTER_TPMS_TEMP_FL: 89
     VELOSTER_TPMS_TEMP_FR: 1
     VELOSTER_TPMS_TEMP_RR: 0
-- response: |-
+  response: |-
     7A8101762C00BFFFF00
-    7A82100B8580100B85E
-    7A8220100AD4E0100B6
-    7A8234D0100AAAAAAAA
-  expected_values:
+    7A82100C0590100B959
+    7A8220100B3520100AF
+    7A823520100AAAAAAAA
+- expected_values:
     VELOSTER_TPMS_ALERT_FL: 0
     VELOSTER_TPMS_ALERT_FR: 1
     VELOSTER_TPMS_ALERT_RR: 1
-    VELOSTER_TPMS_PRESS_FL: 36.8
-    VELOSTER_TPMS_PRESS_FR: 18.8
+    VELOSTER_TPMS_PRESS_FL: 38.4
+    VELOSTER_TPMS_PRESS_FR: 22.6
     VELOSTER_TPMS_PRESS_RL: 0
     VELOSTER_TPMS_PRESS_RR: 0.2
-    VELOSTER_TPMS_TEMP_FL: 88
+    VELOSTER_TPMS_TEMP_FL: 100
     VELOSTER_TPMS_TEMP_FR: 1
     VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100C0690100C571
+    7A8220100BE680100BF
+    7A823660100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 38.6
+    VELOSTER_TPMS_PRESS_FR: 20.8
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 100
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100C1660100C568
+    7A8220100C8610100C5
+    7A8235F0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 39.8
+    VELOSTER_TPMS_PRESS_FR: 20
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 100
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100C7650100C564
+    7A8220100C75D0100C8
+    7A8235D0100AAAAAAAA
