--- a/tests/test_cases/2021/commands/770.778.22BC04.yaml
+++ b/tests/test_cases/2021/commands/770.778.22BC04.yaml
@@ -6,18 +6,25 @@ test_cases:
     VELOSTER_REVERSE_GEAR: 0
   response: |-
     778100B62BC04F03764
-    77821E201000443AAAA
+    778216200000642AAAA
 - expected_values:
     VELOSTER_LOCK_FL: 0
     VELOSTER_LOCK_FR: 0
     VELOSTER_REVERSE_GEAR: 0
   response: |-
     778100B62BC04F03764
-    77821E201000642AAAA
+    778216201000642AAAA
 - expected_values:
     VELOSTER_LOCK_FL: 0
     VELOSTER_LOCK_FR: 0
     VELOSTER_REVERSE_GEAR: 1
   response: |-
     778100B62BC04F03764
-    77821E20D000443AAAA
+    77821620D000642AAAA
+- expected_values:
+    VELOSTER_LOCK_FL: 0
+    VELOSTER_LOCK_FR: 0
+    VELOSTER_REVERSE_GEAR: 1
+  response: |-
+    778100B62BC04F03764
+    77821620D002642AAAA
