--- a/tests/test_cases/2020/commands/7C6.7CE.22B002.yaml
+++ b/tests/test_cases/2020/commands/7C6.7CE.22B002.yaml
@@ -1,47 +1,83 @@
 command_id: 7C6.7CE.22B002
 test_cases:
-- response: |-
-    7CE100F62B002E00000
-    7CE210011B20138E800
-    7CE220000AAAAAAAAAA
-  expected_values:
+- expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 12.5
+    VELOSTER_FLI_VOL: 7
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 35495
+  response: |-
+    7CE100F62B002D00000
+    7CE210007A000000000
+    7CE228AA7AAAAAAAAAA
+- expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 12.42188
+    VELOSTER_FLI_VOL: 19
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 35494
+  response: |-
+    7CE100F62B002D00000
+    7CE2100139F00000000
+    7CE228AA6AAAAAAAAAA
+- expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 13.28125
+    VELOSTER_FLI_VOL: 26
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 36608
+  response: |-
+    7CE100F62B002D00000
+    7CE21001AAA00000000
+    7CE228F00AAAAAAAAAA
+- expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 14.0625
+    VELOSTER_FLI_VOL: 26
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 38144
+  response: |-
+    7CE100F62B002D00000
+    7CE21001AB400000000
+    7CE229500AAAAAAAAAA
+- expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 13.28125
+    VELOSTER_FLI_VOL: 34
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 36607
+  response: |-
+    7CE100F62B002D00000
+    7CE210022AA00000000
+    7CE228EFFAAAAAAAAAA
+- expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 12.26562
+    VELOSTER_FLI_VOL: 48
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 34820
+  response: |-
+    7CE100F62B002D00000
+    7CE2100309D00000000
+    7CE228804AAAAAAAAAA
+- expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 14.29688
+    VELOSTER_FLI_VOL: 79
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 34907
+  response: |-
+    7CE100F62B002D00000
+    7CE21004FB700000000
+    7CE22885BAAAAAAAAAA
+- expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 11.40625
+    VELOSTER_FLI_VOL: 255
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 35516
+  response: |-
+    7CE100F62B002D00000
+    7CE2100FF9200000000
+    7CE228ABCAAAAAAAAAA
+- expected_values:
     VELOSTER_CLUSTER_VOLTAGE: 13.90625
     VELOSTER_FLI_VOL: 17
     VELOSTER_ODO_KM: 80104
     VELOSTER_ODO_MI: 0
-- response: |-
+  response: |-
     7CE100F62B002E00000
-    7CE210013B00138E700
+    7CE210011B20138E800
     7CE220000AAAAAAAAAA
-  expected_values:
-    VELOSTER_CLUSTER_VOLTAGE: 13.75
-    VELOSTER_FLI_VOL: 19
-    VELOSTER_ODO_KM: 80103
-    VELOSTER_ODO_MI: 0
-- response: |-
-    7CE100F62B002E00000
-    7CE210014AF0138E700
-    7CE220000AAAAAAAAAA
-  expected_values:
-    VELOSTER_CLUSTER_VOLTAGE: 13.67188
-    VELOSTER_FLI_VOL: 20
-    VELOSTER_ODO_KM: 80103
-    VELOSTER_ODO_MI: 0
-- response: |-
-    7CE100F62B002E00000
-    7CE210016AE0138E600
-    7CE220000AAAAAAAAAA
-  expected_values:
-    VELOSTER_CLUSTER_VOLTAGE: 13.59375
-    VELOSTER_FLI_VOL: 22
-    VELOSTER_ODO_KM: 80102
-    VELOSTER_ODO_MI: 0
-- response: |-
-    7CE100F62B002E00000
-    7CE21001EB00138E700
-    7CE220000AAAAAAAAAA
-  expected_values:
-    VELOSTER_CLUSTER_VOLTAGE: 13.75
-    VELOSTER_FLI_VOL: 30
-    VELOSTER_ODO_KM: 80103
-    VELOSTER_ODO_MI: 0
