--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -11,7 +11,7 @@ supported_commands_by_ecu:
   "7C6":
   - 7C6.7CE.22B002:VELOSTER_CLUSTER_VOLTAGE,VELOSTER_FLI_VOL,VELOSTER_ODO_KM,VELOSTER_ODO_MI
   "7D1":
-  - 7D1.224000:HYUNDAI_TIRE_FL_VSS_V2,HYUNDAI_TIRE_FR_VSS_V2,HYUNDAI_TIRE_RL_VSS_V2,HYUNDAI_TIRE_RR_VSS_V2
+  - 7D1.7D9.224000:HYUNDAI_TIRE_FL_VSS_V2,HYUNDAI_TIRE_FR_VSS_V2,HYUNDAI_TIRE_RL_VSS_V2,HYUNDAI_TIRE_RR_VSS_V2
   "7D4":
   - 7D4.7DC.220101:VELOSTER_BMS_CHG_PWR,VELOSTER_BMS_DISCHG_PWR,VELOSTER_BMS_MIN_TEMP,VELOSTER_BMS_MOD1_TEMP,VELOSTER_BMS_MOD2_TEMP,VELOSTER_BMS_MOD3_TEMP,VELOSTER_BMS_MOD4_TEMP,VELOSTER_BMS_SOC
   "7E0":
