Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.0142.yaml
+++ b/tests/test_cases/2020/commands/7E0.0142.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.0142
 test_cases:
 - expected_values:
+    VPWR: 13.356
+  response: 7E8044142342C
+- expected_values:
     VPWR: 14.412
   response: 7E8044142384C
