--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -868,6 +868,23 @@ test_cases:
     7E8280080A917000040
     7E829662069605BA050
 - expected_values:
+    VELOSTER_TURBO_BOOST: -1.7746
+    VELOSTER_WG_DUTY: 72.65431
+    VELOSTER_WG_POSITION: 199.16075
+    VELOSTER_WG_SETPOINT: 7.81262
+    VELOSTER_WG_VOLTAGE: 3.69146
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F000080213727
+    7E82236275B273F008F
+    7E8232B562B481A6B1A
+    7E82400001F000F1000
+    7E82500000079000000
+    7E8263145721D000000
+    7E827000000A05E805C
+    7E828FF7F7605003040
+    7E82966E069605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: -1.76137
     VELOSTER_WG_DUTY: 25.2781
     VELOSTER_WG_POSITION: 17.12673
