Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.010F.yaml
+++ b/tests/test_cases/2020/commands/7E0.010F.yaml
@@ -3,3 +3,12 @@ test_cases:
 - expected_values:
     IAT: 33
   response: 7E803410F49
+- expected_values:
+    IAT: 42
+  response: 7E803410F52
+- expected_values:
+    IAT: 45
+  response: 7E803410F55
+- expected_values:
+    IAT: 46
+  response: 7E803410F56
