--- a/tests/test_cases/2020/commands/7E0.0142.yaml
+++ b/tests/test_cases/2020/commands/7E0.0142.yaml
@@ -4,5 +4,14 @@ test_cases:
     VPWR: 13.356
   response: 7E8044142342C
 - expected_values:
+    VPWR: 14.07
+  response: 7E804414236F6
+- expected_values:
+    VPWR: 14.274
+  response: 7E804414237C2
+- expected_values:
+    VPWR: 14.376
+  response: '7E80441423828'
+- expected_values:
     VPWR: 14.412
   response: 7E8044142384C
