Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -452,6 +452,17 @@ test_cases:
     7E825EC0085C9633AFF
     7E82600000000AAAAAA
 - expected_values:
+    VELOSTER_INTAKE_TEMP: 24.0018
+    VELOSTER_OIL_TEMP: 96.75362
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100CBCC4CE44A5A
+    7E822000000006D022F
+    7E823BC40DAE1000058
+    7E82400BBFF03545F02
+    7E825CF0160C120BDFF
+    7E82600000000AAAAAA
+- expected_values:
     VELOSTER_INTAKE_TEMP: 17.25163
     VELOSTER_OIL_TEMP: 65.25283
   response: |-
