--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -783,6 +783,23 @@ test_cases:
     7E8284DDD9B0CA30A40
     7E829662069605BA050
 - expected_values:
+    VELOSTER_TURBO_BOOST: -1.98144
+    VELOSTER_WG_DUTY: 26.37675
+    VELOSTER_WG_POSITION: 7.67834
+    VELOSTER_WG_SETPOINT: 73.43862
+    VELOSTER_WG_VOLTAGE: 3.96979
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F000060208B26
+    7E822D6267D26000066
+    7E8232CF327C718891B
+    7E82400000000001000
+    7E82500000079000000
+    7E826B5428313000000
+    7E8270000008065A021
+    7E828C304EA2F003040
+    7E82966E069605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: -1.27554
     VELOSTER_WG_DUTY: 49.8909
     VELOSTER_WG_POSITION: 15.61913
