--- a/tests/test_cases/2020/commands/7E0.0134.yaml
+++ b/tests/test_cases/2020/commands/7E0.0134.yaml
@@ -1,18 +1,22 @@
 command_id: 7E0.0134
 test_cases:
 - expected_values:
-    LAMBDA11_CURRENT: 0.88324
-    O2S11_CURRENT: -0.80078
-  response: 7E8064134710E7F33
+    LAMBDA11_CURRENT: 0.80701
+    O2S11_CURRENT: -1.40625
+  response: 7E8064134674C7E98
 - expected_values:
-    LAMBDA11_CURRENT: 0.99948
-    O2S11_CURRENT: -0.00781
-  response: 7E80641347FEF7FFE
+    LAMBDA11_CURRENT: 0.86758
+    O2S11_CURRENT: -0.91406
+  response: 7E80641346F0D7F16
+- expected_values:
+    LAMBDA11_CURRENT: 1.00049
+    O2S11_CURRENT: -0.00391
+  response: 7E806413480107FFF
 - expected_values:
     LAMBDA11_CURRENT: 1.00049
     O2S11_CURRENT: 0
   response: '7E806413480108000'
 - expected_values:
     LAMBDA11_CURRENT: 1.99
-    O2S11_CURRENT: 3.53516
-  response: 7E8064134FFFF8389
+    O2S11_CURRENT: 3.03516
+  response: 7E8064134FFFF8309
