--- a/tests/test_cases/2020/commands/7E0.0134.yaml
+++ b/tests/test_cases/2020/commands/7E0.0134.yaml
@@ -9,13 +9,17 @@ test_cases:
     O2S11_CURRENT: -0.91406
   response: 7E80641346F0D7F16
 - expected_values:
-    LAMBDA11_CURRENT: 1.00049
+    LAMBDA11_CURRENT: 0.99948
     O2S11_CURRENT: -0.00391
-  response: 7E806413480107FFF
+  response: 7E80641347FEF7FFF
 - expected_values:
     LAMBDA11_CURRENT: 1.00049
     O2S11_CURRENT: 0
   response: '7E806413480108000'
+- expected_values:
+    LAMBDA11_CURRENT: 1.99
+    O2S11_CURRENT: 2.24219
+  response: 7E8064134FFFF823E
 - expected_values:
     LAMBDA11_CURRENT: 1.99
     O2S11_CURRENT: 3.03516
