Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
@@ -180,6 +180,22 @@ test_cases:
     VELOSTER_TPMS_ALERT_FL: 0
     VELOSTER_TPMS_ALERT_FR: 1
     VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 34.8
+    VELOSTER_TPMS_PRESS_FR: 12.8
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 65
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100AE410100AE40
+    7A8220100AB3F0100A9
+    7A8233E0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
     VELOSTER_TPMS_PRESS_FL: 35
     VELOSTER_TPMS_PRESS_FR: 20.8
     VELOSTER_TPMS_PRESS_RL: 0
