--- a/tests/test_cases/2020/commands/7E0.0144.yaml
+++ b/tests/test_cases/2020/commands/7E0.0144.yaml
@@ -4,8 +4,8 @@ test_cases:
     EQ_RAT: 0.85841
   response: 7E80441446DE0
 - expected_values:
-    EQ_RAT: 0.94533
-  response: '7E80441447900'
+    EQ_RAT: 0.8672
+  response: 7E80441446F00
 - expected_values:
     EQ_RAT: 1.03029
   response: 7E804414483E0
