Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -562,6 +562,23 @@ test_cases:
     7E8286904D82F003040
     7E829662069605BA050
 - expected_values:
+    VELOSTER_TURBO_BOOST: 0.01241
+    VELOSTER_WG_DUTY: 56.25391
+    VELOSTER_WG_POSITION: 39.88708
+    VELOSTER_WG_SETPOINT: 31.03685
+    VELOSTER_WG_VOLTAGE: 3.84283
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F00000027052D
+    7E822042DFF297E03BC
+    7E823267F26C416E816
+    7E824BD02A301C81000
+    7E8250000009D000000
+    7E8267245761E000000
+    7E827000000E0626048
+    7E82801198713DD1340
+    7E82966E069605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: 0.31545
     VELOSTER_WG_DUTY: 80.35401
     VELOSTER_WG_POSITION: 338.4329
@@ -578,6 +595,23 @@ test_cases:
     7E82700000020662066
     7E828DAD898FF000040
     7E829662069605BA050
+- expected_values:
+    VELOSTER_TURBO_BOOST: 0.63413
+    VELOSTER_WG_DUTY: 76.12116
+    VELOSTER_WG_POSITION: 386.8101
+    VELOSTER_WG_SETPOINT: 5.51766
+    VELOSTER_WG_VOLTAGE: 3.99908
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F000000290A30
+    7E822FF2F7B30C006B6
+    7E8232BD229F7170C19
+    7E824D5023A03821100
+    7E82500000079000000
+    7E826DF469524000000
+    7E82700000060666061
+    7E8286FF78E03880340
+    7E82966E069605BA050
 - expected_values:
     VELOSTER_TURBO_BOOST: 0.64736
     VELOSTER_WG_DUTY: 26.66361
