--- a/tests/test_cases/2020/commands/7E0.0144.yaml
+++ b/tests/test_cases/2020/commands/7E0.0144.yaml
@@ -1,11 +1,11 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.78907
+  response: '7E80441446500'
+- expected_values:
     EQ_RAT: 0.81935
   response: 7E804414468E0
-- expected_values:
-    EQ_RAT: 0.8672
-  response: 7E80441446F00
 - expected_values:
     EQ_RAT: 1.03029
   response: 7E804414483E0
