Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
@@ -85,17 +85,33 @@ test_cases:
     VELOSTER_TPMS_ALERT_FR: 1
     VELOSTER_TPMS_ALERT_RR: 1
     VELOSTER_TPMS_PRESS_FL: 33
-    VELOSTER_TPMS_PRESS_FR: 15.6
+    VELOSTER_TPMS_PRESS_FR: 12.4
     VELOSTER_TPMS_PRESS_RL: 0
     VELOSTER_TPMS_PRESS_RR: 0.2
-    VELOSTER_TPMS_TEMP_FL: 79
+    VELOSTER_TPMS_TEMP_FL: 64
     VELOSTER_TPMS_TEMP_FR: 1
     VELOSTER_TPMS_TEMP_RR: 0
   response: |-
     7A8101762C00BFFFF00
-    7A82100A54F0100A54E
-    7A8220100A54E0100A9
-    7A8234F0100AAAAAAAA
+    7A82100A5400100A63E
+    7A8220100A63E0100A5
+    7A8233E0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 33
+    VELOSTER_TPMS_PRESS_FR: 12.4
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 64
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A5400100A63E
+    7A8220100A63E0100A5
+    7A8233F0100AAAAAAAA
 - expected_values:
     VELOSTER_TPMS_ALERT_FL: 0
     VELOSTER_TPMS_ALERT_FR: 1
