Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -100,6 +100,17 @@ test_cases:
     7E82524017AA460BAFE
     7E82600000000AAAAAA
 - expected_values:
+    VELOSTER_INTAKE_TEMP: 48.75242
+    VELOSTER_OIL_TEMP: 96.75362
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B30046000059
+    7E82200000000100192
+    7E8235480260F00004F
+    7E82400C0FF03576502
+    7E825000181C15BC100
+    7E82600000000AAAAAA
+- expected_values:
     VELOSTER_INTAKE_TEMP: 33.00203
     VELOSTER_OIL_TEMP: 99.00368
   response: |-
