Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -45,6 +45,17 @@ test_cases:
     7E825A60165A464BBFE
     7E82600000000AAAAAA
 - expected_values:
+    VELOSTER_INTAKE_TEMP: 19.50169
+    VELOSTER_OIL_TEMP: 96.75362
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B00047000046
+    7E822000000000C016B
+    7E8235300270F000058
+    7E82400BBFF03426602
+    7E825F6015AC1543CFF
+    7E82600000000AAAAAA
+- expected_values:
     VELOSTER_INTAKE_TEMP: 24.0018
     VELOSTER_OIL_TEMP: 83.25328
   response: |-
