Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -100,6 +100,17 @@ test_cases:
     7E825C7008EB045BAFE
     7E82600000000AAAAAA
 - expected_values:
+    VELOSTER_INTAKE_TEMP: 18.00165
+    VELOSTER_OIL_TEMP: 69.00293
+  response: |-
+    7E8102D62E0019FB73F
+    7E82100B0B047840B46
+    7E822000000007100A9
+    7E82322401F06000071
+    7E82400ADFF03486802
+    7E8250702589C46BAFE
+    7E82600000000AAAAAA
+- expected_values:
     VELOSTER_INTAKE_TEMP: 41.25223
     VELOSTER_OIL_TEMP: 90.75347
   response: |-
