Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -12,6 +12,17 @@ test_cases:
     7E825B00164A8643BFF
     7E82600000000AAAAAA
 - expected_values:
+    VELOSTER_INTAKE_TEMP: 15.75159
+    VELOSTER_OIL_TEMP: 48.0024
+  response: |-
+    7E8102D62E0019FB73F
+    7E8210000004300004E
+    7E82200000000090166
+    7E8235200270F0000AE
+    7E8240096FF034A5302
+    7E82523025580373DFF
+    7E82600000000AAAAAA
+- expected_values:
     VELOSTER_INTAKE_TEMP: 18.00165
     VELOSTER_OIL_TEMP: 60.0027
   response: |-
