Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -851,6 +851,23 @@ test_cases:
     7E828B3FE680CFF0B40
     7E82966E06A605BA050
 - expected_values:
+    VELOSTER_TURBO_BOOST: 1.5108
+    VELOSTER_WG_DUTY: 80.19226
+    VELOSTER_WG_POSITION: 342.16831
+    VELOSTER_WG_SETPOINT: 100
+    VELOSTER_WG_VOLTAGE: 3.98444
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F0000402BE331
+    7E822E231A35597460F
+    7E8237878488A2B7A41
+    7E8246F11AF694D2C00
+    7E8250000004A010000
+    7E826AF66B549000100
+    7E82700000000660066
+    7E828A5DAFCFF000040
+    7E82966006B605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: 1.75372
     VELOSTER_WG_DUTY: 74.18021
     VELOSTER_WG_POSITION: 7.58068
