Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -1,6 +1,23 @@
 command_id: 7E0.7E8.22E021
 test_cases:
 - expected_values:
+    VELOSTER_TURBO_BOOST: -3.37281
+    VELOSTER_WG_DUTY: 26.32792
+    VELOSTER_WG_POSITION: 4.76081
+    VELOSTER_WG_SETPOINT: 75.00114
+    VELOSTER_WG_VOLTAGE: 3.78912
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F0000001C0621
+    7E82205214A1A000012
+    7E8232A962BEE1DE41C
+    7E82403000000001000
+    7E82500000079000000
+    7E826F4417D10000000
+    7E82700000030610021
+    7E828B3030C30003040
+    7E82966006B605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: -3.09261
     VELOSTER_WG_DUTY: 25.2018
     VELOSTER_WG_POSITION: 6.78111
