Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -698,6 +698,23 @@ test_cases:
     7E82859F47C0F240F40
     7E82966006B605BA050
 - expected_values:
+    VELOSTER_TURBO_BOOST: 10.12717
+    VELOSTER_WG_DUTY: 64.74708
+    VELOSTER_WG_POSITION: 377.20912
+    VELOSTER_WG_SETPOINT: 24.07874
+    VELOSTER_WG_VOLTAGE: 4.09186
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F00000047E052
+    7E822DF521452793E23
+    7E8236D8C6D69392339
+    7E8246161D25FA02000
+    7E8250000006A010000
+    7E82608666C46000100
+    7E827000000A068C052
+    7E828E0F1690F690F40
+    7E82966006B605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: 12.68863
     VELOSTER_WG_DUTY: 65.32692
     VELOSTER_WG_POSITION: 385.42458
