Update command data for Hyundai/Veloster

--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -970,6 +970,23 @@ test_cases:
     7E8288EEE6A0C6D0C40
     7E829662069605BA050
 - expected_values:
+    VELOSTER_TURBO_BOOST: 13.0963
+    VELOSTER_WG_DUTY: 64.12757
+    VELOSTER_WG_POSITION: 381.18868
+    VELOSTER_WG_SETPOINT: 20.24567
+    VELOSTER_WG_VOLTAGE: 3.91119
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F0000A051855D
+    7E822845DB15AE440D6
+    7E8236B1C6F6C400F3E
+    7E824075BF852E02000
+    7E8250000006A010000
+    7E826F66AAA4F000100
+    7E82700000080642052
+    7E82815F3F50CF50A40
+    7E82966006B605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: -3.43053
     VELOSTER_WG_DUTY: 25.53445
     VELOSTER_WG_POSITION: 20.00763
